logs/asws3.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asws3-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Compiling './lib/python3.5/site-packages/websocket/client.py'...
***   File "./lib/python3.5/site-packages/websocket/client.py", line 29
    super().__init__(f"Received unexpected {recv.name.lower()} frame from client {client.addr, client.port}, "
                                                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/websocket/http'...
Compiling './lib/python3.5/site-packages/websocket/http/handshake.py'...
***   File "./lib/python3.5/site-packages/websocket/http/handshake.py", line 21
    raise BadRequestException(f"Unsupported websocket version {version}")
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/websocket/server.py'...
***   File "./lib/python3.5/site-packages/websocket/server.py", line 80
    logger.warning(f"Cleaning up non-responsive client {client.addr, client.port}")
                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/websocket/stream'...
Compiling './lib/python3.5/site-packages/websocket/stream/buffer.py'...
***   File "./lib/python3.5/site-packages/websocket/stream/buffer.py", line 95
    raise IncompleteReadError(f"{self.read_available} bytes available of {n} expected bytes")
                                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/websocket/stream/fragment.py'...
***   File "./lib/python3.5/site-packages/websocket/stream/fragment.py", line 39
    logger.debug(f"Start fragment _write: fin = {fin}")
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/websocket/stream/reader.py'...
***   File "./lib/python3.5/site-packages/websocket/stream/reader.py", line 95
    f"{e.object[e.start:e.end]} at {e.start}-{e.end}: {e.reason}"[:WebSocketWriter.MAX_LEN_7])
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/websocket/stream/writer.py'...
***   File "./lib/python3.5/site-packages/websocket/stream/writer.py", line 62
    logger.debug(f"Sending {kind.name.lower()} to client.")
                                                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
